add remaining flex items

--- a/css/styles.css
+++ b/css/styles.css
@@ -32,5 +32,13 @@ a {
   font-size: 30px;
 }
 
-/* Flexbox Starts Here: */
+.elements {
+  display: flex;
+  flex-wrap: wrap;
 
+}
+
+.item {
+  flex: 1 1 calc(33.33% - 20px);
+}
+/* Flexbox Starts Here: */
